--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="ncaa,machinelearning,basketball" data-listing-date-sort="1712206800000" data-listing-file-modified-sort="1713244310062" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="23" data-listing-word-count-sort="4476">
+<div class="quarto-post image-right" data-index="0" data-categories="ncaa,machinelearning,basketball" data-listing-date-sort="1713157200000" data-listing-file-modified-sort="1713245027198" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="23" data-listing-word-count-sort="4478">
 <div class="thumbnail">
 <p><a href="./posts/can-you-use-machine-learning-to-win-ncaa-bracket-challenge-2024/index.html" class="no-external"></a></p><a href="./posts/can-you-use-machine-learning-to-win-ncaa-bracket-challenge-2024/index.html" class="no-external">
 <p><img src="./posts/can-you-use-machine-learning-to-win-ncaa-bracket-challenge-2024/image.jpg" class="thumbnail-image"></p>
@@ -213,7 +213,7 @@ window.Quarto = {
 </div>
 <div class="body">
 <h3 class="no-anchor listing-title">
-<a href="./posts/can-you-use-machine-learning-to-win-ncaa-bracket-challenge-2024/index.html" class="no-external">Can you use maching learning to win NCAA Bracket Challenge 2024?</a>
+<a href="./posts/can-you-use-machine-learning-to-win-ncaa-bracket-challenge-2024/index.html" class="no-external">Can you use maching learning to win the NCAA Bracket Challenge 2024?</a>
 </h3>
 <div class="listing-subtitle">
 <a href="./posts/can-you-use-machine-learning-to-win-ncaa-bracket-challenge-2024/index.html" class="no-external"></a>
@@ -230,13 +230,13 @@ basketball
 </div>
 </div>
 <div class="listing-description">
-<a href="./posts/can-you-use-machine-learning-to-win-ncaa-bracket-challenge-2024/index.html" class="no-external">The March Madness tournament challenge looked different this year for me. Typically, I crank out a bracket approximately ten minutes before the first tournament game with my…</a>
+<a href="./posts/can-you-use-machine-learning-to-win-ncaa-bracket-challenge-2024/index.html" class="no-external">The March Madness tournament challenge looked different for me this year. Typically, I crank out a bracket approximately ten minutes before the first tournament game with my…</a>
 </div>
 </div>
 <div class="metadata">
 <a href="./posts/can-you-use-machine-learning-to-win-ncaa-bracket-challenge-2024/index.html" class="no-external">
 <div class="listing-date">
-Apr 4, 2024
+Apr 15, 2024
 </div>
 <div class="listing-author">
 Whitney Schwisow
