--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ window.Quarto = {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(3)</span></div><div class="category" data-category="analysis">analysis <span class="quarto-category-count">(1)</span></div><div class="category" data-category="basketball">basketball <span class="quarto-category-count">(1)</span></div><div class="category" data-category="code">code <span class="quarto-category-count">(1)</span></div><div class="category" data-category="machinelearning">machinelearning <span class="quarto-category-count">(1)</span></div><div class="category" data-category="ncaa">ncaa <span class="quarto-category-count">(1)</span></div><div class="category" data-category="news">news <span class="quarto-category-count">(2)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(4)</span></div><div class="category" data-category="analysis">analysis <span class="quarto-category-count">(2)</span></div><div class="category" data-category="basketball">basketball <span class="quarto-category-count">(1)</span></div><div class="category" data-category="code">code <span class="quarto-category-count">(1)</span></div><div class="category" data-category="football">football <span class="quarto-category-count">(1)</span></div><div class="category" data-category="machinelearning">machinelearning <span class="quarto-category-count">(1)</span></div><div class="category" data-category="ncaa">ncaa <span class="quarto-category-count">(1)</span></div><div class="category" data-category="news">news <span class="quarto-category-count">(2)</span></div><div class="category" data-category="prediction">prediction <span class="quarto-category-count">(1)</span></div><div class="category" data-category="wide receivers">wide receivers <span class="quarto-category-count">(1)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -205,7 +205,49 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="ncaa,machinelearning,basketball" data-listing-date-sort="1713157200000" data-listing-file-modified-sort="1713274992963" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="23" data-listing-word-count-sort="4481">
+<div class="quarto-post image-right" data-index="0" data-categories="analysis,prediction,wide receivers,football" data-listing-date-sort="1715058000000" data-listing-file-modified-sort="1715233715598" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="14" data-listing-word-count-sort="2794">
+<div class="thumbnail">
+<p><a href="./posts/predicting-rookie-wr-fantasy-points/index.html" class="no-external"></a></p><a href="./posts/predicting-rookie-wr-fantasy-points/index.html" class="no-external">
+<p><img src="./posts/predicting-rookie-wr-fantasy-points/image.png" class="thumbnail-image"></p>
+</a><p><a href="./posts/predicting-rookie-wr-fantasy-points/index.html" class="no-external"></a></p>
+</div>
+<div class="body">
+<h3 class="no-anchor listing-title">
+<a href="./posts/predicting-rookie-wr-fantasy-points/index.html" class="no-external">Using Linear Regression to Predict Rookie Wide Receiver Fantasy Points</a>
+</h3>
+<div class="listing-subtitle">
+<a href="./posts/predicting-rookie-wr-fantasy-points/index.html" class="no-external"></a>
+</div>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('analysis'); return false;">
+analysis
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('prediction'); return false;">
+prediction
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('wide receivers'); return false;">
+wide receivers
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('football'); return false;">
+football
+</div>
+</div>
+<div class="listing-description">
+<a href="./posts/predicting-rookie-wr-fantasy-points/index.html" class="no-external">As someone who has never ever played fantasy football, I was stoked to predict which receivers would earn my pretend team points this upcoming season. Ultimately, my task…</a>
+</div>
+</div>
+<div class="metadata">
+<a href="./posts/predicting-rookie-wr-fantasy-points/index.html" class="no-external">
+<div class="listing-date">
+May 7, 2024
+</div>
+<div class="listing-author">
+Whitney Schwisow
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-categories="ncaa,machinelearning,basketball" data-listing-date-sort="1713157200000" data-listing-file-modified-sort="1713274992963" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="23" data-listing-word-count-sort="4481">
 <div class="thumbnail">
 <p><a href="./posts/can-you-use-machine-learning-to-win-ncaa-bracket-challenge-2024/index.html" class="no-external"></a></p><a href="./posts/can-you-use-machine-learning-to-win-ncaa-bracket-challenge-2024/index.html" class="no-external">
 <p><img src="./posts/can-you-use-machine-learning-to-win-ncaa-bracket-challenge-2024/image.jpg" class="thumbnail-image"></p>
@@ -244,7 +286,7 @@ Whitney Schwisow
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-categories="news,code,analysis" data-listing-date-sort="1712206800000" data-listing-file-modified-sort="1712241893826" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="9">
+<div class="quarto-post image-right" data-index="2" data-categories="news,code,analysis" data-listing-date-sort="1712206800000" data-listing-file-modified-sort="1712241893826" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="9">
 <div class="thumbnail">
 <p><a href="./posts/post-with-code/index.html" class="no-external"></a></p><a href="./posts/post-with-code/index.html" class="no-external">
 <p><img src="./posts/post-with-code/image.jpg" class="thumbnail-image"></p>
@@ -283,7 +325,7 @@ Harlow Malloc
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="2" data-categories="news" data-listing-date-sort="1711947600000" data-listing-file-modified-sort="1712241893817" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="32">
+<div class="quarto-post image-right" data-index="3" data-categories="news" data-listing-date-sort="1711947600000" data-listing-file-modified-sort="1712241893817" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="32">
 <div class="thumbnail">
 <p><a href="./posts/welcome/index.html" class="no-external"></a></p><a href="./posts/welcome/index.html" class="no-external">
 <p class="card-img-top"><img src="posts\welcome\thumbnail.jpg"  class="thumbnail-image card-img"/></p>
